--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/button"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView" tools:text="Click Me!"/>
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView" tools:text="Click Me!"
+            android:onClick="onMyButtonClick"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
